--- a/src/components/common.css
+++ b/src/components/common.css
@@ -25,9 +25,10 @@ body {
 }
 
 .section-glow-upward {
-  box-shadow: 0 -0.2rem 0.4rem 0 #DCA3D7, 0 -0.5rem 1.0rem 0 #DCA3D7;
+  position: relative;
+  box-shadow: 0 -0.2rem 0.4rem 0 #DCA3D7A0, 0 -0.5rem 1.2rem -0.1rem #DCA3D780;
 }
 
 .section-glow-downward {
-  box-shadow: 0 0.2rem 0.4rem 0 #DCA3D7, 0 0.5rem 1.0rem 0 #DCA3D7;
+  box-shadow: 0 0.2rem 0.4rem 0 #DCA3D7, 0 0.5rem 1.2rem -0.2rem #DCA3D7;
 }
